Tidying up line spacing. Added subtitle.

--- a/modules/administration/pages/task-schedules.adoc
+++ b/modules/administration/pages/task-schedules.adoc
@@ -1,13 +1,17 @@
 [[ref.webui.admin.schedules]]
 = Task Schedules
 
-Under menu:Admin[Task Schedules] all predefined task bunches are listed.
+
+All predefined task bunches are listed under menu:Admin[Task Schedules].
 
 image::admin_task_schedules.png[scaledwidth=80%]
 
-Click a menu:SUSE Manager Schedules[Schedule name] to open its menu:Schedule Name[Basic Schedule Details] where you can disable it or change the frequency.
+
+Click menu:SUSE Manager Schedules[Schedule name] to open its menu:Schedule Name[Basic Schedule Details]. You can disable it or change its frequency.
+
 Click btn:[Edit Schedule] to update the schedule with your settings.
-To delete a schedule, click btn:[Delete Schedule] in the upper right-hand corner.
+
+Click btn:[Delete Schedule] in the upper right-hand corner to delete a schedule.
 
 [WARNING]
 ====
@@ -15,34 +19,36 @@ Only disable or delete a schedule if you are absolutely certain this is necessar
 ====
 
 If you click a bunch name, a list of runs of that bunch type and their status is displayed.
+
 Clicking the start time links takes you back to the menu:Schedule Name[Basic Schedule Details].
 
-For example, the following predefined task bunches are scheduled by default and can be configured:
 
-menu:auto-errata-default:[]::
+
+== Predefined task bunches
+
+The following predefined task bunches are scheduled by default and can be configured:
+
+menu:auto-errata-default[]::
 Schedule auto errata updates as necessary.
 
-menu:channel-repodata-default:[]::
+menu:channel-repodata-default[]::
 (Re)generates repository metadata files.
 
-
-menu:cleanup-data-default:[]::
+menu:cleanup-data-default[]::
 Cleans up stale package change log and monitoring time series data from the database.
 
-
-menu:clear-taskologs-default:[]::
+menu:clear-taskologs-default[]::
 Clears task engine (taskomatic) history data older than a specified number of days, depending on the job type, from the database.
 
-
-menu:cobbler-sync-default:[]::
+menu:cobbler-sync-default[]::
 Synchronizes distribution and profile data from {productname} to Cobbler.
 For more information about autoinstallation powered by Cobbler, see xref:client-configuration:autoinst-intro.adoc[].
 
-
-menu:compare-configs-default:[]::
+menu:compare-configs-default[]::
 Compares configuration files as stored in configuration channels with the files stored on all configuration-enabled servers.
 To review comparisons, click menu:Systems[] tab and select the system of interest.
 Go to menu:Configuration[Compare Files].
+
 For more information, see xref:reference:systems/system-details/sd-configuration.adoc#sd-config-compare-files[].
 
 
