--- a/modules/administration/pages/task-schedules.adoc
+++ b/modules/administration/pages/task-schedules.adoc
@@ -48,44 +48,37 @@ menu:compare-configs-default[]::
 Compares configuration files as stored in configuration channels with the files stored on all configuration-enabled servers.
 To review comparisons, click menu:Systems[] tab and select the system of interest.
 Go to menu:Configuration[Compare Files].
-
 For more information, see xref:reference:systems/system-details/sd-configuration.adoc#sd-config-compare-files[].
 
-
-menu:cve-server-channels-default:[]::
+menu:cve-server-channels-default[]::
 Updates internal pre-computed CVE data that is used to display results on the menu:Audit[CVE Audit] page.
 Search results in the menu:Audit[CVE Audit] page are updated to the last run of this schedule).
 For more information, see xref:reference:audit/audit-cve-audit.adoc[].
 
-
-menu:daily-status-default:[]::
+menu:daily-status-default[]::
 Sends daily report e-mails to relevant addresses.
 To learn more about how to configure notifications for specific users, see
 xref:reference:users/user-details.adoc[].
 
-
-menu:errata-cache-default:[]::
+menu:errata-cache-default[]::
 Updates internal patch cache database tables, which are used to look up packages that need updates for each server.
 Also, this sends notification emails to users that might be interested in certain patches.
 For more information about patches, see xref:reference:patches/patches-menu.adoc[].
 
-
-menu:errata-queue-default:[]::
+menu:errata-queue-default[]::
 Queues automatic updates (patches) for servers that are configured to receive them.
 
-menu:gatherer-matcher-default:[]::
+menu:gatherer-matcher-default[]::
 Gather virtual host data by running Virtual Host Gatherer configured in Virtual Host Managers.
 After updated data are available the Subscription Matcher job is run.
 
-menu:kickstart-cleanup-default:[]::
+menu:kickstart-cleanup-default[]::
 Cleans up stale kickstart session data.
 
-
-menu:kickstartfile-sync-default:[]::
+menu:kickstartfile-sync-default[]::
 Generates Cobbler files corresponding to Kickstart profiles created by the configuration wizard.
 
-
-menu:mgr-forward-registration-default:[]::
+menu:mgr-forward-registration-default[]::
 Synchronizes client registration data with SUSE Customer Center (SCC).
 By default, new, changed, or deleted client data are forwarded.
 To disable synchronization set in [path]``/etc/rhn/rhn.conf``:
@@ -95,65 +88,60 @@ server.susemanager.forward_registration = 0
 ----
 +
 
-
-menu:mgr-sync-refresh-default:[]::
+menu:mgr-sync-refresh-default[]::
 Synchronizes with SUSE Customer Center (SCC) (``mgr-sync-refresh``).
 By default, all custom channels are also synchronized as part of this task.
 For more information about custom channel synchronization, see xref:administration:custom-channels.adoc#_custom_channel_synchronization[].
 
-menu:minion-action-chain-cleanup-default:[]::
+menu:minion-action-chain-cleanup-default[]::
 Cleanup outdated action chain data.
 
-menu:minion-action-cleanup-default:[]::
+menu:minion-action-cleanup-defaul:[]::
 Deletes stale client action data from the file system.
 First it tries to complete any possibly unfinished actions by looking up the corresponding results; these results are stored in the Salt job cache.
 An unfinished action can occur if the server has missed the results of the action.
 For successfully completed actions it removes artifacts such as executed script files.
 
-menu:minion-checkin-default:[]::
+menu:minion-checkin-default[]::
 Perform a regular check-in on minions.
 
-menu:notifications-cleanup-default:[]::
+menu:notifications-cleanup-default[]::
 Cleanup expired notification messages.
 
-menu:package-cleanup-default:[]::
+menu:package-cleanup-default[]::
 Deletes stale package files from the file system.
 
-menu:reboot-action-cleanup-default:[]::
+menu:reboot-action-cleanup-default[]::
 Any reboot actions pending for more than six hours are marked as failed and associated data is cleaned up in the database.
 For more information on scheduling reboot actions, see xref:reference:systems/system-details/sd-provisioning.adoc#sd-power-management[].
 
-
-menu:sandbox-cleanup-default:[]::
+menu:sandbox-cleanup-default[]::
 Cleans up Sandbox configuration files and channels that are older than the __sandbox_lifetime__ configuration parameter (3 days by default).
 Sandbox files are those imported from systems or files under development.
-For more information, see
-xref:reference:systems/system-details/sd-configuration.adoc#sd-config-add-files[].
+For more information, see xref:reference:systems/system-details/sd-configuration.adoc#sd-config-add-files[].
 
-
-menu:session-cleanup-default:[]::
+menu:session-cleanup-default[]::
 Cleans up stale Web interface sessions, typically data that is temporarily stored when a user logs in and then closes the browser before logging out.
 
-
-menu:ssh-push-default:[]::
+menu:ssh-push-default[]::
 Prompts clients to check in with {productname} via SSH if they are configured with a `SSH Push` contact method.
 
-menu:system-profile-refresh-default:[]::
+menu:system-profile-refresh-default[]::
 Run a Hardware refresh on all systems. This happens only monthly and can increase load on the {productname} Server.
 The job uses xref:specialized-guides:salt/salt-rate-limiting.adoc[Salt Rate Limiting].
 For tuning the batch size, see xref:specialized-guides:large-deployments/tuning.adoc#java-salt-batch-size[].
 
-menu:token-cleanup-default:[]::
+menu:token-cleanup-default[]::
 Deletes expired repository tokens that are used by Salt clients to download packages and metadata.
 
-menu:update-payg-default:[]::
+menu:update-payg-default[]::
 Collect authentication data from configure pay-as-you-go cloud instances.
 
-menu:update-reporting-default:[]::
+menu:update-reporting-default[]::
 Update the local Reporting Database.
 
-menu:update-reporting-hub-default:[]::
+menu:update-reporting-hub-default[]::
 Collect all reporting data from peripheral {productname} Server and update the Hub Reporting Database.
 
-menu:uuid-cleanup-default:[]::
+menu:uuid-cleanup-default[]::
 Cleanup outdated UUID records.
