Changes related to the use of parameters and standard phrazing.

--- a/modules/administration/pages/task-schedules.adoc
+++ b/modules/administration/pages/task-schedules.adoc
@@ -52,13 +52,12 @@ For more information, see xref:reference:systems/system-details/sd-configuration
 
 menu:cve-server-channels-default[]::
 Updates internal pre-computed CVE data that is used to display results on the menu:Audit[CVE Audit] page.
-Search results in the menu:Audit[CVE Audit] page are updated to the last run of this schedule).
+Search results in the menu:Audit[CVE Audit] page are updated to the last run of this schedule.
 For more information, see xref:reference:audit/audit-cve-audit.adoc[].
 
 menu:daily-status-default[]::
 Sends daily report e-mails to relevant addresses.
-To learn more about how to configure notifications for specific users, see
-xref:reference:users/user-details.adoc[].
+For more information about configuring notifications for specific users, see xref:reference:users/user-details.adoc[].
 
 menu:errata-cache-default[]::
 Updates internal patch cache database tables, which are used to look up packages that need updates for each server.
@@ -70,18 +69,18 @@ Queues automatic updates (patches) for servers that are configured to receive th
 
 menu:gatherer-matcher-default[]::
 Gather virtual host data by running Virtual Host Gatherer configured in Virtual Host Managers.
-After updated data are available the Subscription Matcher job is run.
+After updated data are available, the Subscription Matcher job is run.
 
 menu:kickstart-cleanup-default[]::
-Cleans up stale kickstart session data.
+Cleans up stale {kickstart} session data.
 
 menu:kickstartfile-sync-default[]::
-Generates Cobbler files corresponding to Kickstart profiles created by the configuration wizard.
+Generates Cobbler files corresponding to {kickstart} profiles created by the configuration wizard.
 
 menu:mgr-forward-registration-default[]::
-Synchronizes client registration data with SUSE Customer Center (SCC).
+Synchronizes client registration data with {scc}.
 By default, new, changed, or deleted client data are forwarded.
-To disable synchronization set in [path]``/etc/rhn/rhn.conf``:
+To disable synchronization set in [path]``/etc/rhn/rhn.conf``, run:
 +
 ----
 server.susemanager.forward_registration = 0
@@ -89,16 +88,16 @@ server.susemanager.forward_registration = 0
 +
 
 menu:mgr-sync-refresh-default[]::
-Synchronizes with SUSE Customer Center (SCC) (``mgr-sync-refresh``).
+Synchronizes with {scc} (``mgr-sync-refresh``).
 By default, all custom channels are also synchronized as part of this task.
 For more information about custom channel synchronization, see xref:administration:custom-channels.adoc#_custom_channel_synchronization[].
 
 menu:minion-action-chain-cleanup-default[]::
-Cleanup outdated action chain data.
+Clean up outdated action chain data.
 
 menu:minion-action-cleanup-defaul:[]::
 Deletes stale client action data from the file system.
-First it tries to complete any possibly unfinished actions by looking up the corresponding results; these results are stored in the Salt job cache.
+First it tries to complete any possibly unfinished actions by looking up the corresponding results stored in the {salt} job cache.
 An unfinished action can occur if the server has missed the results of the action.
 For successfully completed actions it removes artifacts such as executed script files.
 
@@ -112,7 +111,7 @@ menu:package-cleanup-default[]::
 Deletes stale package files from the file system.
 
 menu:reboot-action-cleanup-default[]::
-Any reboot actions pending for more than six hours are marked as failed and associated data is cleaned up in the database.
+Any reboot actions pending for more than six hours are marked as failed and associated data is cleaned up from the database.
 For more information on scheduling reboot actions, see xref:reference:systems/system-details/sd-provisioning.adoc#sd-power-management[].
 
 menu:sandbox-cleanup-default[]::
@@ -127,15 +126,15 @@ menu:ssh-push-default[]::
 Prompts clients to check in with {productname} via SSH if they are configured with a `SSH Push` contact method.
 
 menu:system-profile-refresh-default[]::
-Run a Hardware refresh on all systems. This happens only monthly and can increase load on the {productname} Server.
+Run a hardware refresh on all systems. This happens only monthly and can increase load on the {productname} Server.
 The job uses xref:specialized-guides:salt/salt-rate-limiting.adoc[Salt Rate Limiting].
 For tuning the batch size, see xref:specialized-guides:large-deployments/tuning.adoc#java-salt-batch-size[].
 
 menu:token-cleanup-default[]::
-Deletes expired repository tokens that are used by Salt clients to download packages and metadata.
+Deletes expired repository tokens that are used by {salt} clients to download packages and metadata.
 
 menu:update-payg-default[]::
-Collect authentication data from configure pay-as-you-go cloud instances.
+Collect authentication data from configure {payg} cloud instances.
 
 menu:update-reporting-default[]::
 Update the local Reporting Database.
@@ -144,4 +143,4 @@ menu:update-reporting-hub-default[]::
 Collect all reporting data from peripheral {productname} Server and update the Hub Reporting Database.
 
 menu:uuid-cleanup-default[]::
-Cleanup outdated UUID records.
+Clean up outdated UUID records.
