--- a/modules/client-configuration/pages/bootstrap-repository.adoc
+++ b/modules/client-configuration/pages/bootstrap-repository.adoc
@@ -164,13 +164,14 @@ For more information about custom channels, see xref:administration:custom-chann
 
 
 
+=== Create Bootstrap Repository for SUSE Liberty Linux 9
 ////
 // https://bugzilla.suse.com/show_bug.cgi?id=1207809
 // https://github.com/SUSE/spacewalk/issues/20464
 // We can either add it here or to all "Register Clients" sections in
 // the clients-xxx.adoc files
 
-When creating the bootstrap repo for SUSE-LibertyLinux9-x86_64 the only file that is added is the salt bundle:
+When creating the bootstrap repository for SUSE Liberty Linux 9-x86_64 the only file that is added is the salt bundle:
 
 Creating bootstrap repo for SUSE-LibertyLinux9-x86_64
 copy 'venv-salt-minion-3004-1.3.3.x86_64'
@@ -180,6 +181,9 @@ Temporary output repo path: /srv/www/htdocs/pub/repositories/res/9/bootstrap.tmp
 Preparing sqlite DBs
 Pool started (with 5 workers)
 Pool finished
+////
+
+When creating the bootstrap repository for SUSE Liberty Linux 9 
 
 This means that customers must use the --force-switch with mgr-bootstrap or modify the bootstrap to use the salt bundle:
 
