--- a/modules/client-configuration/pages/clients-rh-cdn.adoc
+++ b/modules/client-configuration/pages/clients-rh-cdn.adoc
@@ -460,7 +460,8 @@ For more information about GPG keys, see xref:client-configuration:gpg-keys.adoc
 
 [NOTE]
 ====
-To check the [guimenu]``Enable GPG Check`` field for the Red Hat Custom Channels, populate the [guimenu]``GPG Key URL`` field using the file URL pointing to the GPG key stored in the directory [systemitem]``/etc/pki/rpm-gpg`` of the Red Hat minion.
+For the Red Hat Custom Channels, if you want to check the [guimenu]``Enable GPG Check`` field, you need to populate the [guimenu]``GPG Key URL`` field.
+You can use the file URL of the GPG key stored in the directory [systemitem]``/etc/pki/rpm-gpg`` of the Red Hat minion.
 
 Example:
 [systemitem]``file:///etc/pki/rpm-gpg/RPM-GPG-KEY-redhat-release``
