Note to clarify difference between Uyuni and SUMA
Uyuni - 'zypper up'
SUMA - 'zypper patch'

--- a/modules/installation-and-upgrade/pages/server-minor-upgrade-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/server-minor-upgrade-uyuni.adoc
@@ -44,6 +44,11 @@ zypper ref
 ----
 zypper up 
 ----
+[NOTE]
+====
+Uyuni is different from SUSE Manager in this step.  SUSE Manager uses 'zypper patch', but Uyuni requires 'zypper up'
+====
+
 +
 
 . If zypper reports that the Uyuni package won't be upgraded, run the command manually:
