--- a/modules/administration/pages/task-schedules.adoc
+++ b/modules/administration/pages/task-schedules.adoc
@@ -93,7 +93,7 @@ By default, all custom channels are also synchronized as part of this task.
 For more information about custom channel synchronization, see xref:administration:custom-channels.adoc#_custom_channel_synchronization[].
 
 menu:minion-action-chain-cleanup-default[]::
-Clean up outdated action chain data.
+Cleans up outdated action chain data.
 
 menu:minion-action-cleanup-defaul:[]::
 Deletes stale client action data from the file system.
