--- a/modules/administration/pages/task-schedules.adoc
+++ b/modules/administration/pages/task-schedules.adoc
@@ -134,7 +134,7 @@ menu:token-cleanup-default[]::
 Deletes expired repository tokens that are used by {salt} clients to download packages and metadata.
 
 menu:update-payg-default[]::
-Collect authentication data from configure {payg} cloud instances.
+Collects authentication data from configure {payg} cloud instances.
 
 menu:update-reporting-default[]::
 Update the local Reporting Database.
