--- a/modules/administration/pages/task-schedules.adoc
+++ b/modules/administration/pages/task-schedules.adoc
@@ -140,7 +140,7 @@ menu:update-reporting-default[]::
 Update the local Reporting Database.
 
 menu:update-reporting-hub-default[]::
-Collect all reporting data from peripheral {productname} Server and update the Hub Reporting Database.
+Collects all reporting data from peripheral {productname} Server and update the Hub Reporting Database.
 
 menu:uuid-cleanup-default[]::
 Clean up outdated UUID records.
