--- a/modules/administration/pages/task-schedules.adoc
+++ b/modules/administration/pages/task-schedules.adoc
@@ -143,4 +143,4 @@ menu:update-reporting-hub-default[]::
 Collects all reporting data from peripheral {productname} Server and update the Hub Reporting Database.
 
 menu:uuid-cleanup-default[]::
-Clean up outdated UUID records.
+Cleans up outdated UUID records.
