--- a/modules/administration/pages/task-schedules.adoc
+++ b/modules/administration/pages/task-schedules.adoc
@@ -137,7 +137,7 @@ menu:update-payg-default[]::
 Collects authentication data from configure {payg} cloud instances.
 
 menu:update-reporting-default[]::
-Update the local Reporting Database.
+Updates the local Reporting Database.
 
 menu:update-reporting-hub-default[]::
 Collects all reporting data from peripheral {productname} Server and update the Hub Reporting Database.
