In navigation bar, use SUSE Liberty Linux instead of ES (#2203)
* In navigation bar, use SUSE Liberty Linux instead of ES

* sorting alphabetically

* add entry

--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -12,11 +12,11 @@ endif::[]
 * xref:client-config-overview.adoc[Client Configuration Guide]
 ** xref:supported-features.adoc[Supported Clients and Features]
 *** xref:supported-features-sles.adoc[SLES Supported Features]
-// SUSE Liberty Linux not available at Uyuni for now
-ifeval::[{suma-content} == true]
-*** xref:supported-features-es.adoc[SLES-ES Supported Features]
-endif::[]
 *** xref:supported-features-sle-micro.adoc[SLE Micro Supported Features]
+ifeval::[{suma-content} == true]
+// SUSE Liberty Linux not available at Uyuni for now
+*** xref:supported-features-es.adoc[SUSE Liberty Linux Supported Features]
+endif::[]
 // openSUSE Leap Micro not available at SUSE Manager for now
 ifeval::[{uyuni-content} == true]
 *** xref:supported-features-opensuse-leap-micro.adoc[openSUSE Leap Micro Supported Features]
@@ -54,12 +54,12 @@ endif::[]
 **** xref:registration-bootstrap.adoc[Register with Bootstrap Script]
 **** xref:registration-cli.adoc[Register on the Command Line]
 *** xref:registration-overview-suse.adoc[SUSE Client Registration]
-**** xref:clients-sle.adoc[SUSE Linux Enterprise Clients]
 **** xref:clients-slemicro.adoc[SLE Micro Clients]
-// SUSE Liberty Linux not available at Uyuni for now
 ifeval::[{suma-content} == true]
-**** xref:clients-sleses.adoc[Expanded Support Clients]
+// SUSE Liberty Linux not available at Uyuni for now
+**** xref:clients-sleses.adoc[SUSE Liberty Linux Support Clients]
 endif::[]
+**** xref:clients-sle.adoc[SUSE Linux Enterprise Clients]
 *** xref:registration-overview-opensuse.adoc[openSUSE Client Registration]
 **** xref:clients-opensuseleap.adoc[openSUSE Leap Clients]
 // openSUSE Leap Micro not available at SUSE Manager for now
