In navigation bar, use SUSE Liberty Linux instead of ES (#2203)
* In navigation bar, use SUSE Liberty Linux instead of ES

* sorting alphabetically

* add entry

--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -12,9 +12,8 @@ endif::[]
 * xref:client-config-overview.adoc[Client Configuration Guide]
 ** xref:supported-features.adoc[Supported Clients and Features]
 *** xref:supported-features-sles.adoc[SLES Supported Features]
-*** xref:supported-features-es.adoc[SLES-ES Supported Features]
 *** xref:supported-features-sle-micro.adoc[SLE Micro Supported Features]
-
+*** xref:supported-features-es.adoc[SUSE Liberty Linux Supported Features]
 ifeval::[{uyuni-content} == true]
 *** xref:supported-features-alibaba.adoc[Alibaba Cloud Linux Supported Features]
 endif::[]
@@ -47,9 +46,10 @@ endif::[]
 **** xref:registration-bootstrap.adoc[Register with Bootstrap Script]
 **** xref:registration-cli.adoc[Register on the Command Line]
 *** xref:registration-overview-suse.adoc[SUSE Client Registration]
-**** xref:clients-sle.adoc[SUSE Linux Enterprise Clients]
 **** xref:clients-slemicro.adoc[SLE Micro Clients]
-**** xref:clients-sleses.adoc[Expanded Support Clients]
+// SUSE Liberty Linux not available at Uyuni for now
+**** xref:clients-sleses.adoc[SUSE Liberty Linux Support Clients]
+**** xref:clients-sle.adoc[SUSE Linux Enterprise Clients]
 *** xref:registration-overview-opensuse.adoc[openSUSE Client Registration]
 **** xref:clients-opensuseleap.adoc[openSUSE Leap Clients]
 
