--- a/modules/installation-and-upgrade/pages/server-minor-upgrade-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/server-minor-upgrade-uyuni.adoc
@@ -42,13 +42,13 @@ zypper ref
 +
 
 ----
-zypper up 
+zypper up
 ----
 [NOTE]
 ====
-Uyuni is different from SUSE Manager in this step.  SUSE Manager uses 'zypper patch', but Uyuni requires 'zypper up'
+Uyuni is different from SUSE Manager in this step.
+SUSE Manager uses [command]``zypper patch``, but Uyuni requires [command]``zypper up``.
 ====
-
 +
 
 . If zypper reports that the Uyuni package won't be upgraded, run the command manually:
