--- a/modules/client-configuration/pages/bootstrap-repository.adoc
+++ b/modules/client-configuration/pages/bootstrap-repository.adoc
@@ -165,6 +165,7 @@ For more information about custom channels, see xref:administration:custom-chann
 
 
 === Create Bootstrap Repository for SUSE Liberty Linux 9
+
 ////
 // https://bugzilla.suse.com/show_bug.cgi?id=1207809
 // https://github.com/SUSE/spacewalk/issues/20464
@@ -183,10 +184,13 @@ Pool started (with 5 workers)
 Pool finished
 ////
 
-When creating the bootstrap repository for SUSE Liberty Linux 9 
+When creating the bootstrap repository for SUSE Liberty Linux 9 the user must select the Salt bundle contact method.
 
-This means that customers must use the --force-switch with mgr-bootstrap or modify the bootstrap to use the salt bundle:
 
+* With the [command]``mgr-bootstrap`` command use the [option]``--force-bundle`` parameter, or
+
+* Modify the bootstrap script manually and set:
+----
 # Avoid installing venv-salt-minion instead salt-minion
 # even if it available in the bootstrap repo
 AVOID_VENV_SALT_MINION=0
@@ -194,7 +198,4 @@ AVOID_VENV_SALT_MINION=0
 # Force installing venv-salt-minion instead salt-minion
 # even if it is NOT available in the bootstrap repo
 FORCE_VENV_SALT_MINION=1
-
-Otherwise they will encounter an issue where the salt and salt-minions are not available when they try to bootstrap.
-
-////
+----
