--- a/modules/client-configuration/pages/clients-rh-cdn.adoc
+++ b/modules/client-configuration/pages/clients-rh-cdn.adoc
@@ -446,7 +446,7 @@ For more information about GPG keys, see xref:client-configuration:gpg-keys.adoc
 
 [NOTE]
 ====
-For the Red Hat Custom Channels, if you want to check the [guimenu]``Enable GPG Check`` field, you need to populate the [guimenu]``GPG Key URL`` field.
+For the {redhat} custom channels, if you want to check the [guimenu]``Enable GPG Check`` field, you need to populate the [guimenu]``GPG Key URL`` field.
 You can use the file URL of the GPG key stored in the directory [systemitem]``/etc/pki/rpm-gpg`` of the Red Hat minion.
 
 Example:
