--- a/modules/client-configuration/pages/clients-rh-cdn.adoc
+++ b/modules/client-configuration/pages/clients-rh-cdn.adoc
@@ -447,7 +447,7 @@ For more information about GPG keys, see xref:client-configuration:gpg-keys.adoc
 [NOTE]
 ====
 For the {redhat} custom channels, if you want to check the [guimenu]``Enable GPG Check`` field, you need to populate the [guimenu]``GPG Key URL`` field.
-You can use the file URL of the GPG key stored in the directory [systemitem]``/etc/pki/rpm-gpg`` of the Red Hat minion.
+You can use the file URL of the GPG key stored in the directory [systemitem]``/etc/pki/rpm-gpg`` of the {redhat} minion.
 
 Example:
 [systemitem]``file:///etc/pki/rpm-gpg/RPM-GPG-KEY-redhat-release``
