--- a/modules/client-configuration/pages/clients-rh-cdn.adoc
+++ b/modules/client-configuration/pages/clients-rh-cdn.adoc
@@ -452,7 +452,7 @@ You can use the file URL of the GPG key stored in the directory [systemitem]``/e
 Example:
 [systemitem]``file:///etc/pki/rpm-gpg/RPM-GPG-KEY-redhat-release``
 
-For the complete list of the Red Hat Product Signing keys, see https://access.redhat.com/security/team/key.
+For the complete list of the {redhat} product signing keys, see https://access.redhat.com/security/team/key.
 ====
 
 
