--- a/modules/administration/pages/task-schedules.adoc
+++ b/modules/administration/pages/task-schedules.adoc
@@ -7,7 +7,8 @@ All predefined task bunches are listed under menu:Admin[Task Schedules].
 image::admin_task_schedules.png[scaledwidth=80%]
 
 
-Click menu:SUSE Manager Schedules[Schedule name] to open its menu:Schedule Name[Basic Schedule Details]. You can disable it or change its frequency.
+Click menu:SUSE Manager Schedules[Schedule name] to open the menu:Schedule Name[Basic Schedule Details].
+You can disable it or change the frequency.
 
 Click btn:[Edit Schedule] to update the schedule with your settings.
 
