--- a/modules/administration/pages/task-schedules.adoc
+++ b/modules/administration/pages/task-schedules.adoc
@@ -103,7 +103,7 @@ An unfinished action can occur if the server has missed the results of the actio
 For successfully completed actions it removes artifacts such as executed script files.
 
 menu:minion-checkin-default[]::
-Performs a regular check-in on minions.
+Performs a regular check-in on clients.
 
 menu:notifications-cleanup-default[]::
 Cleanup expired notification messages.
