--- a/modules/administration/pages/task-schedules.adoc
+++ b/modules/administration/pages/task-schedules.adoc
@@ -106,7 +106,7 @@ menu:minion-checkin-default[]::
 Performs a regular check-in on clients.
 
 menu:notifications-cleanup-default[]::
-Cleanup expired notification messages.
+Cleans up expired notification messages.
 
 menu:package-cleanup-default[]::
 Deletes stale package files from the file system.
