Leftover style and typo fixes.

--- a/modules/administration/pages/task-schedules.adoc
+++ b/modules/administration/pages/task-schedules.adoc
@@ -7,7 +7,8 @@ All predefined task bunches are listed under menu:Admin[Task Schedules].
 image::admin_task_schedules.png[scaledwidth=80%]
 
 
-Click menu:SUSE Manager Schedules[Schedule name] to open its menu:Schedule Name[Basic Schedule Details]. You can disable it or change its frequency.
+Click menu:SUSE Manager Schedules[Schedule name] to open the menu:Schedule Name[Basic Schedule Details]. 
+You can disable it or change its frequency.
 
 Click btn:[Edit Schedule] to update the schedule with your settings.
 
@@ -29,7 +30,7 @@ Clicking the start time links takes you back to the menu:Schedule Name[Basic Sch
 The following predefined task bunches are scheduled by default and can be configured:
 
 menu:auto-errata-default[]::
-Schedule auto errata updates as necessary.
+Schedules auto errata updates as necessary.
 
 menu:channel-repodata-default[]::
 (Re)generates repository metadata files.
@@ -102,10 +103,10 @@ An unfinished action can occur if the server has missed the results of the actio
 For successfully completed actions it removes artifacts such as executed script files.
 
 menu:minion-checkin-default[]::
-Performs a regular check-in on minions.
+Performs a regular check-in on clients.
 
 menu:notifications-cleanup-default[]::
-Cleanup expired notification messages.
+Cleans up expired notification messages.
 
 menu:package-cleanup-default[]::
 Deletes stale package files from the file system.
@@ -126,7 +127,8 @@ menu:ssh-push-default[]::
 Prompts clients to check in with {productname} via SSH if they are configured with a `SSH Push` contact method.
 
 menu:system-profile-refresh-default[]::
-Run a hardware refresh on all systems. This happens only monthly and can increase load on the {productname} Server.
+Runs a hardware refresh on all systems. 
+This happens only monthly and can increase load on the {productname} Server.
 The job uses xref:specialized-guides:salt/salt-rate-limiting.adoc[Salt Rate Limiting].
 For tuning the batch size, see xref:specialized-guides:large-deployments/tuning.adoc#java-salt-batch-size[].
 
