--- a/modules/client-configuration/pages/clients-rh-cdn.adoc
+++ b/modules/client-configuration/pages/clients-rh-cdn.adoc
@@ -3,7 +3,7 @@
 
 // SUSE Liberty Linux not available at Uyuni for now
 ifeval::[{suma-content} == true]
-If you are running {rhel} clients directly, rather than using {sleses}, you need to use Red Hat sources to retrieve and update packages.
+If you are running {rhel} clients directly, rather than using {sleses}, you need to use {redhat} sources to retrieve and update packages.
 endif::[]
 
 This section contains information about using the {redhat} content delivery network (CDN) to register traditional and Salt clients running {rhel} operating systems.
@@ -242,7 +242,7 @@ spacewalk-common-channels can't be used because centosX-uyuni-client requires ce
 * In the [guimenu]``Repository Label`` field, type [systemitem]``centos7-uyuni-client``.
 * In the [guimenu]``Repository URL`` field, type the URL of the repository to mirror.
 For example, [systemitem]``https://download.opensuse.org/repositories/systemsmanagement:/Uyuni:/Stable:/CentOS7-Uyuni-Client-Tools/CentOS_7/``.
-* In the [guimenu]``Has Signed Metadata?`` field, uncheck all Red Hat Enterprise Repositories.
+* In the [guimenu]``Has Signed Metadata?`` field, uncheck all {redhat} Enterprise Repositories.
 * Leave all other fields as the default values.
 . Click btn:[Create Repository].
 . Navigate to menu:Software[Manage > Channels].
@@ -268,8 +268,8 @@ endif::[]
 
 == Prepare Custom Repositories and Channels
 
-To mirror the software from the Red Hat CDN, you need to create custom channels and repositories in {productname} that are linked to the CDN by a URL.
-You must have entitlements to these products in your Red Hat Portal for this to work correctly.
+To mirror the software from the {redhat} CDN, you need to create custom channels and repositories in {productname} that are linked to the CDN by a URL.
+You must have entitlements to these products in your {redhat} Portal for this to work correctly.
 You can use the subscription manager tool to get the URLs of the repositories you want to mirror:
 
 ----
@@ -460,13 +460,13 @@ For more information about GPG keys, see xref:client-configuration:gpg-keys.adoc
 
 [NOTE]
 ====
-For the Red Hat Custom Channels, if you want to check the [guimenu]``Enable GPG Check`` field, you need to populate the [guimenu]``GPG Key URL`` field.
-You can use the file URL of the GPG key stored in the directory [systemitem]``/etc/pki/rpm-gpg`` of the Red Hat minion.
+For the {redhat} custom channels, if you want to check the [guimenu]``Enable GPG Check`` field, you need to populate the [guimenu]``GPG Key URL`` field.
+You can use the file URL of the GPG key stored in the directory [systemitem]``/etc/pki/rpm-gpg`` of the {redhat} minion.
 
 Example:
 [systemitem]``file:///etc/pki/rpm-gpg/RPM-GPG-KEY-redhat-release``
 
-For the complete list of the Red Hat Product Signing keys, see https://access.redhat.com/security/team/key.
+For the complete list of the {redhat} product signing keys, see https://access.redhat.com/security/team/key.
 ====
 
 
