--- a/modules/client-configuration/pages/bootstrap-repository.adoc
+++ b/modules/client-configuration/pages/bootstrap-repository.adoc
@@ -164,7 +164,7 @@ For more information about custom channels, see xref:administration:custom-chann
 
 
 
-=== Create Bootstrap Repository for SUSE Liberty Linux 9
+=== Create Bootstrap Repository for {sll} 9
 
 ////
 // https://bugzilla.suse.com/show_bug.cgi?id=1207809
