--- a/modules/client-configuration/pages/bootstrap-repository.adoc
+++ b/modules/client-configuration/pages/bootstrap-repository.adoc
@@ -184,7 +184,7 @@ Pool started (with 5 workers)
 Pool finished
 ////
 
-When creating the bootstrap repository for {sll} 9 the user must select the Salt bundle contact method.
+When creating the bootstrap repository for {sll} 9 the user must select the {salt} bundle contact method.
 
 
 * With the [command]``mgr-bootstrap`` command use the [option]``--force-bundle`` parameter, or
