--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -38,7 +38,7 @@ endif::[]
 
 
 Traditional clients are not available on {sll}{nbsp}8 or 9.
-{sll}{nbsp}8 and 9 clients are only supported as Salt clients.
+{sll}{nbsp}8 and 9 clients are only supported as {salt} clients.
 
 For more information, see xref:client-configuration:contact-methods-saltbundle.adoc#contact-methods-saltbundle-using[].
 
