--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -29,9 +29,9 @@ If you switch, the [package]``salt-minion`` package and its dependencies will st
 
 
 [[contact-methods-saltbundle-using]]
-=== Using the Salt Bundle with the Salt Minion
+=== Using the {salt} Bundle with the {salt} Minion
 
-The Salt Bundle can be used with the Salt Minion managed by the Salt Master other than {productname} Server at the same time.
+The {salt} Bundle can be used with the {salt} Minion managed by the {salt} Master other than {productname} Server at the same time.
 If the Salt Bundle is installed on a client {productname} Server will manage the configuration files of the Salt Bundle, the configuration files of [literal]``salt-minion`` will not be managed in this case.
 For more information, see xref:client-configuration:registration-cli.adoc#_salt_bundle_configuration[Salt Bundle configuration].
 
