--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -13,7 +13,7 @@ endif::[]
 ** xref:supported-features.adoc[Supported Clients and Features]
 *** xref:supported-features-sles.adoc[SLES Supported Features]
 *** xref:supported-features-sle-micro.adoc[SLE Micro Supported Features]
-*** xref:supported-features-es.adoc[SUSE Liberty Linux Supported Features]
+*** xref:supported-features-es.adoc[{sll} Supported Features]
 ifeval::[{uyuni-content} == true]
 *** xref:supported-features-alibaba.adoc[Alibaba Cloud Linux Supported Features]
 endif::[]
