Added placeholder for troubleshooting.

--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -161,3 +161,5 @@ With this information available, a zypper plugin is invoked to get a valid authe
 * Removing the zypper credentials or the imported certificate,  it (what is IT - the connector?) will stop working.
 * [literal]``systemd`` service (what is its name?), provided in cloud image, is running by default and should be keep running. If it is no longer running, the credentials may stop working.
 ====
+
+== Troubleshooting (to be added)
