--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -142,7 +142,7 @@ For more about registering clients, see xref:client-configuration:registration-o
 
 * Running `registercloudguest --clean` can cause problems if no new cloud connection is registered with the cloud guest command.
 
-* Refreshing or changing the [litera;]``registercloudguest`` connection to the public cloud update infrastructure is fine.  << OM: what does ``fine`` mean?
+* Refreshing or changing the [litera;]``registercloudguest`` connection to the public cloud update infrastructure should not interfere with the credentials usage.
 ====
 
 == {payg} connector process
