--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -197,3 +197,20 @@ mgr-create-bootstrap-repo
 ----
 
 For more information on registering your clients, see xref:client-configuration:registration-overview.adoc[].
+
+
+
+[[reboot]]
+== Reboot {micro}
+
+It is necessary to add a section about reboot method in SLE micro / transactional systems.
+
+Basically, as transactional-update supports several reboot methods, we recommend to use systemd in systems managed by SUMA, and using other method can lead to undesired behavior.
+
+By default, reboot method is set to auto, which means that rebootmgrd will be used to reboot the system according to the configured policies if the service is running, otherwise systemctl reboot will be called.
+
+When bootstraping a transactional-system on Suma, systemd will be configured as REBOOT_METHOD, if the system is in its default configuration. The idea behind this strategy is to put Suma on control of the reboot action, considering that systemd should perform the reboot immediately.
+
+Otherwise, the only thing Suma will be able to do is to ask for a reboot and it will be managed in the peculiarities of each reboot method. Not having control of when the reboot should happen, also takes away from Suma the ability to perform the reboot on its own maintenance windows, which is not the ideal configuration.
+
+The user must be able to change reboot method at any time and SUSE Manager will keep it. But in this case we should alert in the documentation that using any method different from systemd may cause undesired behavior.
