--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -158,7 +158,11 @@ With this information available, a zypper plugin is invoked to get a valid authe
 
 [IMPORTANT]
 ====
-* Removing the zypper credentials or the imported certificate,  it (what is IT - the connector?) will stop working.
+Any of the following actions/changes in the payg instance will lead to credentials stopping to work:
+* Remove zypper credentials files
+* Remove the imported certificates
+* Remove cloud-specific entries from `/etc/hosts`
+* Stop the service named "??"
 * [literal]``systemd`` service (what is its name?), provided in cloud image, is running by default and should be keep running. If it is no longer running, the credentials may stop working.
 ====
 
