--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -127,6 +127,14 @@ Further diagnostics about the status of the instance needs to be done on the clo
 == Registering {payg} system as a client
 
 You can register a {payg} instance from where you harvest the credentials as a {salt} client.
+The instance needs to have a valid cloud connection registered, otherwise it will not have access to channels.
+If the user removes the cloud packages, the credentials harvesting may stop working.
+
+
+Using [literal]``registercloudguest``::
+* Refreshing or changing the [literal]``registercloudguest`` connection to the public cloud update infrastructure should not interfere with the credentials usage.
+* Running [literal]```registercloudguest --clean`` can cause problems if no new cloud connection is registered with the cloud guest command.
+
 
 First set up the {payg} instance to collect authentication data, so it can synchronize the channels.
 
@@ -134,36 +142,20 @@ The rest of the process is the same as for any non-public-cloud client and consi
 
 For more about registering clients, see xref:client-configuration:registration-overview.adoc[].
 
-[IMPORTANT]
-====
-* The instance needs to have a valid cloud connection registered, otherwise it will not have access to channels.
-
-* If the user removes the cloud packages, the credentials harvesting may stop working.
-
-* Running `registercloudguest --clean` can cause problems if no new cloud connection is registered with the cloud guest command.
-
-* Refreshing or changing the [litera;]``registercloudguest`` connection to the public cloud update infrastructure should not interfere with the credentials usage.
-====
-
-== {payg} connector process
-
-{payg} connector process uses:
-
-* files stored in [path]``/etc/zypp/credentials`` 
-* certificate that should alredy exist on the machine (instance?). This certificate is added by the cloud infrastructure.
-* an entry in the machine's [literal]``hosts``file that is needed for the cloud plugin to work. It is automatically set by the installed cloud packages.
-
-With this information available, a zypper plugin is invoked to get a valid authentication header.
-(OM: I need a sentence here to bridge the {payg} connector and the authentication header.)
 
 [IMPORTANT]
 ====
-Any of the following actions/changes in the payg instance will lead to credentials stopping to work:
-* Remove zypper credentials files
-* Remove the imported certificates
-* Remove cloud-specific entries from `/etc/hosts`
-* Stop the service named "??"
-* [literal]``systemd`` service (what is its name?), provided in cloud image, is running by default and should be keep running. If it is no longer running, the credentials may stop working.
+Any of the following actions or changes in the {payg} instance will lead to credentials stopping to work:
+
+* removing zypper credentials files
+* removing the imported certificates
+* remove cloud-specific entries from [path]``/etc/hosts``
+* stopping the [literal]``systemd`` service named "??"
 ====
 
-== Troubleshooting (to be added)
+
+== Troubleshooting 
+
+If the script fails to collect the credentials, it should provide an proper error message in the logs and in the {webui}.
+If the credentials are not working, [literal]``reposync`` should show the proper error.
+
