--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -200,12 +200,13 @@ For more information on registering your clients, see xref:client-configuration:
 
 
 
-[[reboot]]
+[[clients-slemicro-reboot]]
 == Reboot {micro}
 
-It is necessary to add a section about reboot method in SLE micro / transactional systems.
-
-Basically, as transactional-update supports several reboot methods, we recommend to use systemd in systems managed by SUMA, and using other method can lead to undesired behavior.
+{micro} is a transactional system.
+Transactional updates in general support several reboot methods.
+It is recommended to use [systemitem]``systemd`` for rebooting in systems managed by {productname}.
+Using other methods can lead to undesired behavior.
 
 By default, reboot method is set to auto, which means that rebootmgrd will be used to reboot the system according to the configured policies if the service is running, otherwise systemctl reboot will be called.
 
