--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -208,9 +208,11 @@ Transactional updates in general support several reboot methods.
 It is recommended to use [systemitem]``systemd`` for rebooting in systems managed by {productname}.
 Using other methods can lead to undesired behavior.
 
-By default, reboot method is set to auto, which means that rebootmgrd will be used to reboot the system according to the configured policies if the service is running, otherwise systemctl reboot will be called.
+By default, the reboot method is set to [option]``auto``.
+[command]``rebootmgrd`` will be used to reboot the system according to the configured policies if the service is running, otherwise systemctl reboot will be called.
 
-When bootstraping a transactional-system on Suma, systemd will be configured as REBOOT_METHOD, if the system is in its default configuration. The idea behind this strategy is to put Suma on control of the reboot action, considering that systemd should perform the reboot immediately.
+When bootstraping a transactional system on {productname}, [systemitem]``systemd`` will be configured as the reboot method ([literal]``REBOOT_METHOD``), if the system is in its default configuration.
+The idea behind this strategy is to put Suma on control of the reboot action, considering that systemd should perform the reboot immediately.
 
 Otherwise, the only thing Suma will be able to do is to ask for a reboot and it will be managed in the peculiarities of each reboot method. Not having control of when the reboot should happen, also takes away from Suma the ability to perform the reboot on its own maintenance windows, which is not the ideal configuration.
 
