--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -133,7 +133,7 @@ If the user removes the cloud packages, the credentials harvesting may stop work
 
 Using [literal]``registercloudguest``::
 * Refreshing or changing the [literal]``registercloudguest`` connection to the public cloud update infrastructure should not interfere with the credentials usage.
-* Running [literal]```registercloudguest --clean`` can cause problems if no new cloud connection is registered with the cloud guest command.
+* Running [literal]```registercloudguest --clean`` will cause problems if no new cloud connection is registered with the cloud guest command.
 
 
 First set up the {payg} instance to collect authentication data, so it can synchronize the channels.
