Final changes implemented.

--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -150,12 +150,17 @@ Any of the following actions or changes in the {payg} instance will lead to cred
 * removing zypper credentials files
 * removing the imported certificates
 * remove cloud-specific entries from [path]``/etc/hosts``
-* stopping the [literal]``systemd`` service named "??"
 ====
 
 
 == Troubleshooting 
 
-If the script fails to collect the credentials, it should provide an proper error message in the logs and in the {webui}.
-If the credentials are not working, [literal]``reposync`` should show the proper error.
+Checking the credentils::
+* If the script fails to collect the credentials, it should provide an proper error message in the logs and in the {webui}.
+* If the credentials are not working, [literal]``reposync`` should show the proper error.
+
+Using [literal]``registercloudguest``::
+* Refreshing or changing the [literal]``registercloudguest`` connection to the public cloud update infrastructure should not interfere with the credentials usage.
+* Running [literal]```registercloudguest --clean`` will cause problems if no new cloud connection is registered with the cloud guest command.
+
 
