--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -132,7 +132,7 @@ If the user removes the cloud packages, the credentials harvesting may stop work
 
 First set up the {payg} instance to collect authentication data, so it can synchronize the channels.
 
-The rest of the process is the same as for any non-public-cloud client and consists of synchronizing channels, automatic bootstrap scriptcreation, activation key creation and starting the registeration.
+The rest of the process is the same as for any non-public-cloud client and consists of synchronizing channels, automatic bootstrap script creation, activation key creation and starting the registration.
 
 For more about registering clients, see xref:client-configuration:registration-overview.adoc[].
 
