--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -149,7 +149,7 @@ Any of the following actions or changes in the {payg} instance will lead to cred
 
 == Troubleshooting 
 
-Checking the credentils::
+Checking the credentials::
 * If the script fails to collect the credentials, it should provide an proper error message in the logs and in the {webui}.
 * If the credentials are not working, [literal]``reposync`` should show the proper error.
 
