--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -143,7 +143,7 @@ Any of the following actions or changes in the {payg} instance will lead to cred
 
 * removing zypper credentials files
 * removing the imported certificates
-* remove cloud-specific entries from [path]``/etc/hosts``
+* removing cloud-specific entries from [path]``/etc/hosts``
 ====
 
 
