wording. partially ported from https://github.com/uyuni-project/uyuni-docs/pull/1662 https://github.com/SUSE/spacewalk/issues/18440

--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -7,7 +7,7 @@ The clients can be successfully bootstrapped without the GPG key being trusted.
 However, you cannot install new client tool packages or update them until the keys are trusted.
 
 Salt clients now use GPG key information entered for a software channel to manage the trusted keys.
-When a software channel with GPG key information is assigned to a client, the key is trusted as soon as the channel is refreshed or the first package gets installed from this channel.
+When a software channel with GPG key information is assigned to a client, the key is trusted when the channel is refreshed or the first package is installed from the channel.
 
 The GPG key URL parameter in the software channel page can contain multiple key URLs separated by "whitespace".
 In case it is a file URL, the GPG key file must be deployed on the client before the software channel is used.
@@ -31,7 +31,7 @@ If a user configures an own GPG key to sign the metadata as described in "Use Yo
 
 === User defined GPG keys
 
-Users can define their own GPG keys to be deployed to the client.
+Users can define customGPG keys to be deployed to a client.
 
 By providing some pillar data and providing the GPG key files in the {salt} filesystem, they are automatically deployed to the client.
 
@@ -57,7 +57,7 @@ ls -la /srv/salt/gpg/
 /srv/salt/gpg/my_second_gpgkey.gpg
 ----
 
-The keys are now deployed to the client at [path]``/etc/pki/rpm-gpg/my_first_gpg.key`` and [path]``/etc/pki/rpm-gpg/my_second_gpgkey.gpg``.
+The keys are deployed to the client at [path]``/etc/pki/rpm-gpg/my_first_gpg.key`` and [path]``/etc/pki/rpm-gpg/my_second_gpgkey.gpg``.
 
 The last step is to add the URL to the GPG key URL field of the software channel.
 Navigate to menu:Software[Manage > Channels] and select the channel you want to modify.
