Add the list of server statistics metrics

--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -311,6 +311,28 @@ To enable self-health monitoring on a proxy, you need to manually install export
 
 The following relevant metrics are collected on the {productname} Server.
 
+.Server statistics (port 80)
+[cols="45,10,45"]
+|===
+|Metric |Type | Description
+
+|uyuni_all_systems
+|gauge
+|Number of all systems
+
+|uyuni_virtual_systems
+|gauge
+|Number of virtual systems
+
+|uyuni_inactive_systems
+|gauge
+|Number of inactive systems
+
+|uyuni_outdated_systems
+|gauge
+|Number of systems with outdated packages
+|===
+
 .PostgreSQL exporter (port 9187)
 [cols="45,10,45"]
 |===
